refactor(TextCleaner): Remove exemple usage.

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -3,32 +3,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "initial_id",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-06-17T09:14:19.546839Z",
-     "start_time": "2025-06-17T09:14:19.542931Z"
-    },
-    "collapsed": true
-   },
+   "id": "d42a42e0",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# load data from csv file\n",
     "import pandas as pd\n",
     "\n",
-    "df = pd.read_csv('data/chatgpt-reddit-comments.csv')\n",
-    "\n",
-    "# print the first 5 rows\n",
-    "# print(df.head())\n",
-    "\n",
-    "# print the last 5 rows\n",
-    "print(df.tail())"
+    "df = pd.read_csv('data/chatgpt-reddit-comments.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "cd5f144d",
+   "execution_count": null,
+   "id": "636445fe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,73 +105,6 @@
     "\tLegacy function for backward compatibility.\n",
     "\t\"\"\"\n",
     "\treturn cleaner.clean_text(text)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "eef9fd1d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Texte original:\n",
-      "'\\n<p>Hello @user123! Check out this link: https://example.com/test #AI #ChatGPT</p>\\nThis has NUMBERS 123 and punctuation!!! \\n   Multiple    spaces   everywhere.\\n'\n",
-      "\n",
-      "==================================================\n",
-      "\n",
-      "1. Suppression HTML: '\\nHello @user123! Check out this link: https://example.com/test #AI #ChatGPT\\nThis has NUMBERS 123 and punctuation!!! \\n   Multiple    spaces   everywhere.\\n'\n",
-      "2. Conversion minuscules: '\\nhello @user123! check out this link: https://example.com/test #ai #chatgpt\\nthis has numbers 123 and punctuation!!! \\n   multiple    spaces   everywhere.\\n'\n",
-      "3. Suppression URLs: \"Visitez  pour plus d'infos\"\n",
-      "4. Suppression mentions/hashtags: 'Salut  '\n",
-      "5. Suppression ponctuation: 'Hello world'\n",
-      "6. Suppression chiffres: \"J'ai  ans en \"\n",
-      "7. Normalisation espaces: 'espaces multiples'\n",
-      "\n",
-      "==================================================\n",
-      "\n",
-      "Nettoyage complet:\n",
-      "'hello check out this link this has numbers and punctuation multiple spaces everywhere'\n",
-      "\n",
-      "==================================================\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Test de la classe NettoyeurTexte\n",
-    "cleaner = TextCleaner()\n",
-    "\n",
-    "# Exemple de texte à nettoyer\n",
-    "texte_test = \"\"\"\n",
-    "<p>Hello @user123! Check out this link: https://example.com/test #AI #ChatGPT</p>\n",
-    "This has NUMBERS 123 and punctuation!!! \n",
-    "   Multiple    spaces   everywhere.\n",
-    "\"\"\"\n",
-    "\n",
-    "print(\"Texte original:\")\n",
-    "print(repr(texte_test))\n",
-    "print(\"\\n\" + \"=\"*50 + \"\\n\")\n",
-    "\n",
-    "# Test de chaque étape individuellement\n",
-    "print(\"1. Suppression HTML:\", repr(cleaner.remove_html(texte_test)))\n",
-    "print(\"2. Conversion minuscules:\", repr(cleaner.convert_to_lowercase(cleaner.remove_html(texte_test))))\n",
-    "print(\"3. Suppression URLs:\", repr(cleaner.remove_urls(\"Visitez https://example.com pour plus d'infos\")))\n",
-    "print(\"4. Suppression mentions/hashtags:\", repr(cleaner.remove_mentions_hashtags(\"Salut @user #test\")))\n",
-    "print(\"5. Suppression ponctuation:\", repr(cleaner.remove_punctuation(\"Hello, world!!!\")))\n",
-    "print(\"6. Suppression chiffres:\", repr(cleaner.remove_digits(\"J'ai 25 ans en 2023\")))\n",
-    "print(\"7. Normalisation espaces:\", repr(cleaner.normalize_whitespace(\"   espaces    multiples   \")))\n",
-    "\n",
-    "print(\"\\n\" + \"=\"*50 + \"\\n\")\n",
-    "\n",
-    "# Test du nettoyage complet\n",
-    "print(\"Nettoyage complet:\")\n",
-    "resultat_complet = cleaner.clean_text(texte_test)\n",
-    "print(repr(resultat_complet))\n",
-    "\n",
-    "print(\"\\n\" + \"=\"*50 + \"\\n\")\n"
    ]
   }
  ],
