feat(TextTokenizer, StopwordRemover): Add class for tokenisation and stop word remover.

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -20,7 +20,6 @@
    "outputs": [],
    "source": [
     "import re\n",
-    "import nltk\n",
     "from bs4 import BeautifulSoup\n",
     "\n",
     "class TextCleaner:\n",
@@ -105,6 +104,84 @@
     "\tLegacy function for backward compatibility.\n",
     "\t\"\"\"\n",
     "\treturn cleaner.clean_text(text)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cdd1bc14",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import nltk\n",
+    "from nltk.tokenize import word_tokenize\n",
+    "\n",
+    "# Comment once done for the first time\n",
+    "nltk.download('punkt')\n",
+    "\n",
+    "class TextTokenizer:\n",
+    "\t\"\"\"\n",
+    "\tClass for tokenizing cleaned text into word-level tokens.\n",
+    "\t\"\"\"\n",
+    "\t\n",
+    "\tdef __init__(self):\n",
+    "\t\tpass\n",
+    "\t\n",
+    "\tdef tokenize(self, text):\n",
+    "\t\t\"\"\"\n",
+    "\t\tTokenize text into words.\n",
+    "\t\t\n",
+    "\t\tArgs:\n",
+    "\t\t\ttext (str): The cleaned input text\n",
+    "\t\t\n",
+    "\t\tReturns:\n",
+    "\t\t\tList[str]: List of tokens\n",
+    "\t\t\"\"\"\n",
+    "\t\tif not isinstance(text, str):\n",
+    "\t\t\treturn []\n",
+    "\t\treturn word_tokenize(text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cea26699",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import nltk\n",
+    "from nltk.corpus import stopwords\n",
+    "\n",
+    "# À exécuter une seule fois dans ton code\n",
+    "nltk.download('stopwords')\n",
+    "\n",
+    "class StopwordRemover:\n",
+    "\t\"\"\"\n",
+    "\tClass for removing stopwords from tokenized text.\n",
+    "\t\"\"\"\n",
+    "\t\n",
+    "\tdef __init__(self, language=\"english\"):\n",
+    "\t\t\"\"\"\n",
+    "\t\tInitialize the stopword remover with a given language.\n",
+    "\t\t\n",
+    "\t\tArgs:\n",
+    "\t\t\tlanguage (str): Language of the stopwords (default is 'english')\n",
+    "\t\t\"\"\"\n",
+    "\t\tself.stop_words = set(stopwords.words(language))\n",
+    "\t\n",
+    "\tdef remove_stopwords(self, tokens):\n",
+    "\t\t\"\"\"\n",
+    "\t\tRemove stopwords from a list of tokens.\n",
+    "\t\t\n",
+    "\t\tArgs:\n",
+    "\t\t\ttokens (List[str]): List of word tokens\n",
+    "\t\t\n",
+    "\t\tReturns:\n",
+    "\t\t\tList[str]: Tokens without stopwords\n",
+    "\t\t\"\"\"\n",
+    "\t\tif not isinstance(tokens, list):\n",
+    "\t\t\treturn []\n",
+    "\t\treturn [word for word in tokens if word.lower() not in self.stop_words]\n"
    ]
   }
  ],
