feat(TextLemmatizer): Add class for lemmatization and download necessary NLTK packages.

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "d42a42e0",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "636445fe",
    "metadata": {},
    "outputs": [],
@@ -108,10 +108,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "cdd1bc14",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package punkt to\n",
+      "[nltk_data]     C:\\Users\\omist\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package punkt is already up-to-date!\n"
+     ]
+    }
+   ],
    "source": [
     "import nltk\n",
     "from nltk.tokenize import word_tokenize\n",
@@ -144,10 +154,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "cea26699",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package stopwords to\n",
+      "[nltk_data]     C:\\Users\\omist\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package stopwords is already up-to-date!\n"
+     ]
+    }
+   ],
    "source": [
     "import nltk\n",
     "from nltk.corpus import stopwords\n",
@@ -182,6 +202,80 @@
     "\t\tif not isinstance(tokens, list):\n",
     "\t\t\treturn []\n",
     "\t\treturn [word for word in tokens if word.lower() not in self.stop_words]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "eb654ae8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package wordnet to\n",
+      "[nltk_data]     C:\\Users\\omist\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package wordnet is already up-to-date!\n",
+      "[nltk_data] Downloading package omw-1.4 to\n",
+      "[nltk_data]     C:\\Users\\omist\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data] Downloading package averaged_perceptron_tagger to\n",
+      "[nltk_data]     C:\\Users\\omist\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Unzipping taggers\\averaged_perceptron_tagger.zip.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import nltk\n",
+    "from nltk.stem import WordNetLemmatizer\n",
+    "from nltk.corpus import wordnet\n",
+    "\n",
+    "# Comment once done for the first time\n",
+    "nltk.download('wordnet')\n",
+    "nltk.download('omw-1.4')\n",
+    "nltk.download('averaged_perceptron_tagger')\n",
+    "\n",
+    "class TextLemmatizer:\n",
+    "\t\"\"\"\n",
+    "\tClass for lemmatizing word tokens using NLTK's WordNetLemmatizer.\n",
+    "\t\"\"\"\n",
+    "\t\n",
+    "\tdef __init__(self):\n",
+    "\t\tself.lemmatizer = WordNetLemmatizer()\n",
+    "\t\n",
+    "\tdef get_wordnet_pos(self, treebank_tag):\n",
+    "\t\t\"\"\"\n",
+    "\t\tConvert POS tag from Treebank to WordNet format for better lemmatization.\n",
+    "\t\t\"\"\"\n",
+    "\t\tif treebank_tag.startswith('J'):\n",
+    "\t\t\treturn wordnet.ADJ\n",
+    "\t\telif treebank_tag.startswith('V'):\n",
+    "\t\t\treturn wordnet.VERB\n",
+    "\t\telif treebank_tag.startswith('N'):\n",
+    "\t\t\treturn wordnet.NOUN\n",
+    "\t\telif treebank_tag.startswith('R'):\n",
+    "\t\t\treturn wordnet.ADV\n",
+    "\t\telse:\n",
+    "\t\t\treturn wordnet.NOUN  # fallback\n",
+    "\t\n",
+    "\tdef lemmatize(self, tokens):\n",
+    "\t\t\"\"\"\n",
+    "\t\tLemmatize a list of word tokens.\n",
+    "\t\t\n",
+    "\t\tArgs:\n",
+    "\t\t\ttokens (List[str]): List of word tokens\n",
+    "\t\t\n",
+    "\t\tReturns:\n",
+    "\t\t\tList[str]: Lemmatized tokens\n",
+    "\t\t\"\"\"\n",
+    "\t\tif not isinstance(tokens, list):\n",
+    "\t\t\treturn []\n",
+    "\n",
+    "\t\tpos_tags = nltk.pos_tag(tokens)  # POS tagging\n",
+    "\t\treturn [\n",
+    "\t\t\tself.lemmatizer.lemmatize(token, self.get_wordnet_pos(pos))\n",
+    "\t\t\tfor token, pos in pos_tags\n",
+    "\t\t]\n"
    ]
   }
  ],
