--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -2,19 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 50,
    "id": "d42a42e0",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
+    "ntlk_dir = 'nltk_data'\n",
     "df = pd.read_csv('data/chatgpt-reddit-comments.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 51,
    "id": "636445fe",
    "metadata": {},
    "outputs": [],
@@ -108,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 52,
    "id": "cdd1bc14",
    "metadata": {},
    "outputs": [
@@ -116,18 +117,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[nltk_data] Downloading package punkt to\n",
-      "[nltk_data]     C:\\Users\\omist\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package punkt is already up-to-date!\n"
+      "[nltk_data] Downloading package punkt_tab to nltk_data...\n",
+      "[nltk_data]   Package punkt_tab is already up-to-date!\n"
      ]
     }
    ],
    "source": [
     "import nltk\n",
     "from nltk.tokenize import word_tokenize\n",
+    "import os\n",
+    "\n",
+    "# Configure NLTK data path\n",
+    "nltk.data.path.append(os.path.abspath(ntlk_dir))\n",
     "\n",
     "# Comment once done for the first time\n",
-    "nltk.download('punkt')\n",
+    "nltk.download('punkt_tab', download_dir=ntlk_dir)\n",
     "\n",
     "class TextTokenizer:\n",
     "\t\"\"\"\n",
@@ -154,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 53,
    "id": "cea26699",
    "metadata": {},
    "outputs": [
@@ -162,8 +166,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[nltk_data] Downloading package stopwords to\n",
-      "[nltk_data]     C:\\Users\\omist\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data] Downloading package stopwords to nltk_data...\n",
       "[nltk_data]   Package stopwords is already up-to-date!\n"
      ]
     }
@@ -172,8 +175,8 @@
     "import nltk\n",
     "from nltk.corpus import stopwords\n",
     "\n",
-    "# À exécuter une seule fois dans ton code\n",
-    "nltk.download('stopwords')\n",
+    "# Comment once done for the first time\n",
+    "nltk.download('stopwords', download_dir=ntlk_dir)\n",
     "\n",
     "class StopwordRemover:\n",
     "\t\"\"\"\n",
@@ -206,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 54,
    "id": "eb654ae8",
    "metadata": {},
    "outputs": [
@@ -214,14 +217,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[nltk_data] Downloading package wordnet to\n",
-      "[nltk_data]     C:\\Users\\omist\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data] Downloading package wordnet to nltk_data...\n",
       "[nltk_data]   Package wordnet is already up-to-date!\n",
-      "[nltk_data] Downloading package omw-1.4 to\n",
-      "[nltk_data]     C:\\Users\\omist\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data] Downloading package averaged_perceptron_tagger to\n",
-      "[nltk_data]     C:\\Users\\omist\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Unzipping taggers\\averaged_perceptron_tagger.zip.\n"
+      "[nltk_data] Downloading package omw-1.4 to nltk_data...\n",
+      "[nltk_data]   Package omw-1.4 is already up-to-date!\n",
+      "[nltk_data] Downloading package averaged_perceptron_tagger_eng to\n",
+      "[nltk_data]     nltk_data...\n",
+      "[nltk_data]   Unzipping taggers\\averaged_perceptron_tagger_eng.zip.\n"
      ]
     }
    ],
@@ -231,9 +233,9 @@
     "from nltk.corpus import wordnet\n",
     "\n",
     "# Comment once done for the first time\n",
-    "nltk.download('wordnet')\n",
-    "nltk.download('omw-1.4')\n",
-    "nltk.download('averaged_perceptron_tagger')\n",
+    "nltk.download('wordnet', download_dir=ntlk_dir)\n",
+    "nltk.download('omw-1.4', download_dir=ntlk_dir)\n",
+    "nltk.download('averaged_perceptron_tagger_eng', download_dir=ntlk_dir)\n",
     "\n",
     "class TextLemmatizer:\n",
     "\t\"\"\"\n",
@@ -276,6 +278,104 @@
     "\t\t\tself.lemmatizer.lemmatize(token, self.get_wordnet_pos(pos))\n",
     "\t\t\tfor token, pos in pos_tags\n",
     "\t\t]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "92c8aeab",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== DÉMONSTRATION DU PREPROCESSING ===\n",
+      "\n",
+      "📝 Exemple 1:\n",
+      "Original: <p>Hello @user123! Check out this amazing #AI tool: https://example.com/awesome-tool 🚀</p>\n",
+      "Nettoyé: 'hello check out this amazing tool'\n",
+      "Tokens: ['hello', 'check', 'out', 'this', 'amazing', 'tool']\n",
+      "Sans mots vides: ['hello', 'check', 'amazing', 'tool']\n",
+      "Lemmatisé: ['hello', 'check', 'amaze', 'tool']\n",
+      "--------------------------------------------------------------------------------\n",
+      "\n",
+      "📝 Exemple 2:\n",
+      "Original: I'm loving the new ChatGPT updates!!! It's so much better than before... 😍\n",
+      "Nettoyé: 'im loving the new chatgpt updates its so much better than before'\n",
+      "Tokens: ['im', 'loving', 'the', 'new', 'chatgpt', 'updates', 'its', 'so', 'much', 'better', 'than', 'before']\n",
+      "Sans mots vides: ['im', 'loving', 'new', 'chatgpt', 'updates', 'much', 'better']\n",
+      "Lemmatisé: ['im', 'love', 'new', 'chatgpt', 'update', 'much', 'good']\n",
+      "--------------------------------------------------------------------------------\n",
+      "\n",
+      "📝 Exemple 3:\n",
+      "Original: Why are people still using OLD technologies in 2024??? Makes NO sense to me!!!\n",
+      "Nettoyé: 'why are people still using old technologies in makes no sense to me'\n",
+      "Tokens: ['why', 'are', 'people', 'still', 'using', 'old', 'technologies', 'in', 'makes', 'no', 'sense', 'to', 'me']\n",
+      "Sans mots vides: ['people', 'still', 'using', 'old', 'technologies', 'makes', 'sense']\n",
+      "Lemmatisé: ['people', 'still', 'use', 'old', 'technology', 'make', 'sense']\n",
+      "--------------------------------------------------------------------------------\n",
+      "\n",
+      "📝 Exemple 4:\n",
+      "Original: <div>Visit our website www.example.com for more info about #MachineLearning and #DataScience</div>\n",
+      "Nettoyé: 'visit our website wwwexamplecom for more info about and'\n",
+      "Tokens: ['visit', 'our', 'website', 'wwwexamplecom', 'for', 'more', 'info', 'about', 'and']\n",
+      "Sans mots vides: ['visit', 'website', 'wwwexamplecom', 'info']\n",
+      "Lemmatisé: ['visit', 'website', 'wwwexamplecom', 'info']\n",
+      "--------------------------------------------------------------------------------\n",
+      "\n",
+      "📝 Exemple 5:\n",
+      "Original: Running, jumped, better, good, children, mice, feet - testing different word forms\n",
+      "Nettoyé: 'running jumped better good children mice feet testing different word forms'\n",
+      "Tokens: ['running', 'jumped', 'better', 'good', 'children', 'mice', 'feet', 'testing', 'different', 'word', 'forms']\n",
+      "Sans mots vides: ['running', 'jumped', 'better', 'good', 'children', 'mice', 'feet', 'testing', 'different', 'word', 'forms']\n",
+      "Lemmatisé: ['run', 'jump', 'good', 'good', 'child', 'mice', 'foot', 'test', 'different', 'word', 'form']\n",
+      "--------------------------------------------------------------------------------\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exemple d'utilisation avec des chaînes de caractères aléatoires\n",
+    "\n",
+    "# Créer les instances des classes\n",
+    "text_cleaner = TextCleaner()\n",
+    "tokenizer = TextTokenizer()\n",
+    "stopword_remover = StopwordRemover()\n",
+    "lemmatizer = TextLemmatizer()\n",
+    "\n",
+    "# Exemples de textes avec différents problèmes\n",
+    "sample_texts = [\n",
+    "\t\"<p>Hello @user123! Check out this amazing #AI tool: https://example.com/awesome-tool 🚀</p>\",\n",
+    "\t\"I'm loving the new ChatGPT updates!!! It's so much better than before... 😍\",\n",
+    "\t\"Why are people still using OLD technologies in 2024??? Makes NO sense to me!!!\",\n",
+    "\t\"<div>Visit our website www.example.com for more info about #MachineLearning and #DataScience</div>\",\n",
+    "\t\"Running, jumped, better, good, children, mice, feet - testing different word forms\"\n",
+    "]\n",
+    "\n",
+    "print(\"=== DÉMONSTRATION DU PREPROCESSING ===\\n\")\n",
+    "\n",
+    "for i, text in enumerate(sample_texts, 1):\n",
+    "\tprint(f\"📝 Exemple {i}:\")\n",
+    "\tprint(f\"Original: {text}\")\n",
+    "\t\n",
+    "\t# Étape 1: Nettoyage\n",
+    "\tcleaned = text_cleaner.clean_text(text)\n",
+    "\tprint(f\"Nettoyé: '{cleaned}'\")\n",
+    "\t\n",
+    "\t# Étape 2: Tokenisation\n",
+    "\ttokens = tokenizer.tokenize(cleaned)\n",
+    "\tprint(f\"Tokens: {tokens}\")\n",
+    "\t\n",
+    "\t# Étape 3: Suppression des mots vides\n",
+    "\ttokens_no_stop = stopword_remover.remove_stopwords(tokens)\n",
+    "\tprint(f\"Sans mots vides: {tokens_no_stop}\")\n",
+    "\t\n",
+    "\t# Étape 4: Lemmatisation\n",
+    "\tlemmatized = lemmatizer.lemmatize(tokens_no_stop)\n",
+    "\tprint(f\"Lemmatisé: {lemmatized}\")\n",
+    "\t\n",
+    "\tprint(\"-\" * 80 + \"\\n\")\n"
    ]
   }
  ],
