--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 56,
    "id": "d42a42e0",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 57,
    "id": "636445fe",
    "metadata": {},
    "outputs": [],
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 58,
    "id": "cdd1bc14",
    "metadata": {},
    "outputs": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 59,
    "id": "cea26699",
    "metadata": {},
    "outputs": [
@@ -204,12 +204,13 @@
     "\t\t\"\"\"\n",
     "\t\tif not isinstance(tokens, list):\n",
     "\t\t\treturn []\n",
-    "\t\treturn [word for word in tokens if word.lower() not in self.stop_words]\n"
+    "\t\tnegations = {\"not\", \"no\", \"never\", \"n't\"}\n",
+    "\t\treturn [word for word in tokens if word.lower() not in self.stop_words or word.lower() in negations]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 60,
    "id": "eb654ae8",
    "metadata": {},
    "outputs": [
@@ -223,7 +224,8 @@
       "[nltk_data]   Package omw-1.4 is already up-to-date!\n",
       "[nltk_data] Downloading package averaged_perceptron_tagger_eng to\n",
       "[nltk_data]     nltk_data...\n",
-      "[nltk_data]   Unzipping taggers\\averaged_perceptron_tagger_eng.zip.\n"
+      "[nltk_data]   Package averaged_perceptron_tagger_eng is already up-to-\n",
+      "[nltk_data]       date!\n"
      ]
     }
    ],
@@ -282,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 61,
    "id": "92c8aeab",
    "metadata": {},
    "outputs": [
@@ -312,8 +314,8 @@
       "Original: Why are people still using OLD technologies in 2024??? Makes NO sense to me!!!\n",
       "Nettoyé: 'why are people still using old technologies in makes no sense to me'\n",
       "Tokens: ['why', 'are', 'people', 'still', 'using', 'old', 'technologies', 'in', 'makes', 'no', 'sense', 'to', 'me']\n",
-      "Sans mots vides: ['people', 'still', 'using', 'old', 'technologies', 'makes', 'sense']\n",
-      "Lemmatisé: ['people', 'still', 'use', 'old', 'technology', 'make', 'sense']\n",
+      "Sans mots vides: ['people', 'still', 'using', 'old', 'technologies', 'makes', 'no', 'sense']\n",
+      "Lemmatisé: ['people', 'still', 'use', 'old', 'technology', 'make', 'no', 'sense']\n",
       "--------------------------------------------------------------------------------\n",
       "\n",
       "📝 Exemple 4:\n",
