feat(preprocessing): Enhance documentation and structure of the text preprocessing pipeline with detailed markdown sections and class descriptions.

--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -1,8 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "bf0632d2",
+   "metadata": {},
+   "source": [
+    "# Pipeline de Preprocessing de Texte pour l'Analyse de Sentiments\n",
+    "\n",
+    "Ce notebook contient un pipeline complet de preprocessing de texte optimisé pour l'analyse de commentaires Reddit. Le pipeline comprend plusieurs étapes de nettoyage, tokenisation, suppression des mots vides et lemmatisation.\n",
+    "\n",
+    "## 📊 Chargement des Données\n",
+    "\n",
+    "Cette section charge le dataset de commentaires Reddit ChatGPT et configure le répertoire pour les données NLTK.\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 74,
    "id": "d42a42e0",
    "metadata": {},
    "outputs": [],
@@ -14,8 +28,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "caa95a15",
+   "metadata": {},
+   "source": [
+    "## 🧹 Classe TextCleaner - Nettoyage du Texte\n",
+    "\n",
+    "Cette classe effectue le nettoyage et la préprocessing du texte avec plusieurs étapes :\n",
+    "\n",
+    "- **Suppression HTML** : Retire les balises HTML (`<p>`, `<div>`, etc.)\n",
+    "- **Conversion en minuscules** : Uniformise la casse\n",
+    "- **Suppression des URLs** : Retire les liens HTTP/HTTPS\n",
+    "- **Suppression des mentions/hashtags** : Retire @mentions et #hashtags\n",
+    "- **Suppression de la ponctuation** : Retire tous les caractères de ponctuation\n",
+    "- **Suppression des chiffres** : Retire les nombres\n",
+    "- **Normalisation des espaces** : Uniformise les espaces multiples\n",
+    "\n",
+    "La méthode `clean_text()` applique toutes ces étapes en séquence.\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 75,
    "id": "636445fe",
    "metadata": {},
    "outputs": [],
@@ -28,52 +62,52 @@
     "\tClass for cleaning and preprocessing text data with multiple processing steps.\n",
     "\t\"\"\"\n",
     "\t\n",
-    "\tdef __init__(self):\n",
+    "\tdef __init__(self) -> None:\n",
     "\t\tpass\n",
     "\t\n",
-    "\tdef remove_html(self, text):\n",
+    "\tdef remove_html(self, text) -> str:\n",
     "\t\t\"\"\"Remove HTML tags from text.\"\"\"\n",
     "\t\tif not isinstance(text, str):\n",
     "\t\t\treturn \"\"\n",
     "\t\treturn BeautifulSoup(text, \"html.parser\").get_text()\n",
     "\t\n",
-    "\tdef convert_to_lowercase(self, text):\n",
+    "\tdef convert_to_lowercase(self, text) -> str:\n",
     "\t\t\"\"\"Convert text to lowercase.\"\"\"\n",
     "\t\tif not isinstance(text, str):\n",
     "\t\t\treturn \"\"\n",
     "\t\treturn text.lower()\n",
     "\t\n",
-    "\tdef remove_urls(self, text):\n",
+    "\tdef remove_urls(self, text) -> str:\n",
     "\t\t\"\"\"Remove URLs from text.\"\"\"\n",
     "\t\tif not isinstance(text, str):\n",
     "\t\t\treturn \"\"\n",
     "\t\treturn re.sub(r\"http\\S+\", \"\", text)\n",
     "\t\n",
-    "\tdef remove_mentions_hashtags(self, text):\n",
+    "\tdef remove_mentions_hashtags(self, text) -> str:\n",
     "\t\t\"\"\"Remove mentions (@username) and hashtags (#hashtag) from text.\"\"\"\n",
     "\t\tif not isinstance(text, str):\n",
     "\t\t\treturn \"\"\n",
     "\t\treturn re.sub(r\"@\\w+|#\\w+\", \"\", text)\n",
     "\t\n",
-    "\tdef remove_punctuation(self, text):\n",
+    "\tdef remove_punctuation(self, text) -> str:\n",
     "\t\t\"\"\"Remove punctuation from text.\"\"\"\n",
     "\t\tif not isinstance(text, str):\n",
     "\t\t\treturn \"\"\n",
     "\t\treturn re.sub(r\"[^\\w\\s]\", \"\", text)\n",
     "\t\n",
-    "\tdef remove_digits(self, text):\n",
+    "\tdef remove_digits(self, text) -> str:\n",
     "\t\t\"\"\"Remove digits from text.\"\"\"\n",
     "\t\tif not isinstance(text, str):\n",
     "\t\t\treturn \"\"\n",
     "\t\treturn re.sub(r\"\\d+\", \"\", text)\n",
     "\t\n",
-    "\tdef normalize_whitespace(self, text):\n",
+    "\tdef normalize_whitespace(self, text) -> str:\n",
     "\t\t\"\"\"Normalize whitespace in text.\"\"\"\n",
     "\t\tif not isinstance(text, str):\n",
     "\t\t\treturn \"\"\n",
     "\t\treturn re.sub(r\"\\s+\", \" \", text).strip()\n",
     "\t\n",
-    "\tdef clean_text(self, text):\n",
+    "\tdef clean_text(self, text) -> str:\n",
     "\t\t\"\"\"\n",
     "\t\tApply all cleaning steps to the text.\n",
     "\t\t\n",
@@ -97,19 +131,34 @@
     "\t\t\n",
     "\t\treturn text\n",
     "\n",
-    "# Create an instance for backward compatibility\n",
     "cleaner = TextCleaner()\n",
     "\n",
-    "def clean_text(text):\n",
-    "\t\"\"\"\n",
-    "\tLegacy function for backward compatibility.\n",
-    "\t\"\"\"\n",
+    "def clean_text(text) -> str:\n",
     "\treturn cleaner.clean_text(text)\n"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4d5d51c8",
+   "metadata": {},
+   "source": [
+    "## 🔤 Classe TextTokenizer - Tokenisation\n",
+    "\n",
+    "Cette classe divise le texte nettoyé en tokens (mots individuels) en utilisant le tokenizer de NLTK.\n",
+    "\n",
+    "**Configuration NLTK** :\n",
+    "- Configure le chemin de données NLTK vers le dossier local\n",
+    "- Télécharge le package `punkt_tab` nécessaire pour la tokenisation\n",
+    "\n",
+    "**Fonctionnalité** :\n",
+    "- Transforme une chaîne de caractères en liste de mots\n",
+    "- Gère les contractions et la ponctuation restante\n",
+    "- Retourne une liste vide si l'entrée n'est pas valide\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 76,
    "id": "cdd1bc14",
    "metadata": {},
    "outputs": [
@@ -131,17 +180,17 @@
     "nltk.data.path.append(os.path.abspath(ntlk_dir))\n",
     "\n",
     "# Comment once done for the first time\n",
-    "nltk.download('punkt_tab', download_dir=ntlk_dir)\n",
+    "# nltk.download('punkt_tab', download_dir=ntlk_dir)\n",
     "\n",
     "class TextTokenizer:\n",
     "\t\"\"\"\n",
     "\tClass for tokenizing cleaned text into word-level tokens.\n",
     "\t\"\"\"\n",
     "\t\n",
-    "\tdef __init__(self):\n",
+    "\tdef __init__(self) -> None:\n",
     "\t\tpass\n",
     "\t\n",
-    "\tdef tokenize(self, text):\n",
+    "\tdef tokenize(self, text) -> list[str]:\n",
     "\t\t\"\"\"\n",
     "\t\tTokenize text into words.\n",
     "\t\t\n",
@@ -157,8 +206,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ce7345d4",
+   "metadata": {},
+   "source": [
+    "## 🚫 Classe StopwordRemover - Suppression des Mots Vides\n",
+    "\n",
+    "Cette classe supprime les mots vides (stopwords) qui n'apportent pas de sens sémantique significatif.\n",
+    "\n",
+    "**Caractéristiques** :\n",
+    "- Utilise la liste de stopwords anglais de NLTK\n",
+    "- **Préservation des négations** : Garde les mots comme \"not\", \"no\", \"never\", \"n't\" car ils sont cruciaux pour l'analyse de sentiment\n",
+    "- Paramètre de langue configurable (anglais par défaut)\n",
+    "- Comparaison insensible à la casse\n",
+    "\n",
+    "**Objectif** : Réduire le bruit tout en préservant les indicateurs de sentiment importants.\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 77,
    "id": "cea26699",
    "metadata": {},
    "outputs": [
@@ -176,14 +243,14 @@
     "from nltk.corpus import stopwords\n",
     "\n",
     "# Comment once done for the first time\n",
-    "nltk.download('stopwords', download_dir=ntlk_dir)\n",
+    "# nltk.download('stopwords', download_dir=ntlk_dir)\n",
     "\n",
     "class StopwordRemover:\n",
     "\t\"\"\"\n",
     "\tClass for removing stopwords from tokenized text.\n",
     "\t\"\"\"\n",
     "\t\n",
-    "\tdef __init__(self, language=\"english\"):\n",
+    "\tdef __init__(self, language=\"english\") -> None:\n",
     "\t\t\"\"\"\n",
     "\t\tInitialize the stopword remover with a given language.\n",
     "\t\t\n",
@@ -192,7 +259,7 @@
     "\t\t\"\"\"\n",
     "\t\tself.stop_words = set(stopwords.words(language))\n",
     "\t\n",
-    "\tdef remove_stopwords(self, tokens):\n",
+    "\tdef remove_stopwords(self, tokens, keep_negation=True) -> list[str]:\n",
     "\t\t\"\"\"\n",
     "\t\tRemove stopwords from a list of tokens.\n",
     "\t\t\n",
@@ -204,13 +271,38 @@
     "\t\t\"\"\"\n",
     "\t\tif not isinstance(tokens, list):\n",
     "\t\t\treturn []\n",
-    "\t\tnegations = {\"not\", \"no\", \"never\", \"n't\"}\n",
-    "\t\treturn [word for word in tokens if word.lower() not in self.stop_words or word.lower() in negations]\n"
+    "\t\tif keep_negation:\n",
+    "\t\t\tnegations = {\"not\", \"no\", \"never\", \"n't\"}\n",
+    "\t\t\treturn [word for word in tokens if word.lower() not in self.stop_words or word.lower() in negations]\n",
+    "\t\telse:\n",
+    "\t\t\treturn [word for word in tokens if word.lower() not in self.stop_words]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac0463c5",
+   "metadata": {},
+   "source": [
+    "## 🔄 Classe TextLemmatizer - Lemmatisation\n",
+    "\n",
+    "Cette classe réduit les mots à leur forme canonique (lemme) pour normaliser les variations morphologiques.\n",
+    "\n",
+    "**Packages NLTK requis** :\n",
+    "- `wordnet` : Base de données lexicale\n",
+    "- `omw-1.4` : Open Multilingual Wordnet\n",
+    "- `averaged_perceptron_tagger_eng` : Étiqueteur morpho-syntaxique anglais\n",
+    "\n",
+    "**Fonctionnement** :\n",
+    "1. **POS Tagging** : Détermine la catégorie grammaticale de chaque mot\n",
+    "2. **Conversion des tags** : Convertit les tags TreeBank vers le format WordNet\n",
+    "3. **Lemmatisation** : Applique la lemmatisation en fonction du type grammatical\n",
+    "\n",
+    "**Exemples** : \"running\" → \"run\", \"better\" → \"good\", \"children\" → \"child\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "id": "eb654ae8",
    "metadata": {},
    "outputs": [
@@ -235,19 +327,19 @@
     "from nltk.corpus import wordnet\n",
     "\n",
     "# Comment once done for the first time\n",
-    "nltk.download('wordnet', download_dir=ntlk_dir)\n",
-    "nltk.download('omw-1.4', download_dir=ntlk_dir)\n",
-    "nltk.download('averaged_perceptron_tagger_eng', download_dir=ntlk_dir)\n",
+    "# nltk.download('wordnet', download_dir=ntlk_dir)\n",
+    "# nltk.download('omw-1.4', download_dir=ntlk_dir)\n",
+    "# nltk.download('averaged_perceptron_tagger_eng', download_dir=ntlk_dir)\n",
     "\n",
     "class TextLemmatizer:\n",
     "\t\"\"\"\n",
     "\tClass for lemmatizing word tokens using NLTK's WordNetLemmatizer.\n",
     "\t\"\"\"\n",
     "\t\n",
-    "\tdef __init__(self):\n",
+    "\tdef __init__(self) -> None:\n",
     "\t\tself.lemmatizer = WordNetLemmatizer()\n",
     "\t\n",
-    "\tdef get_wordnet_pos(self, treebank_tag):\n",
+    "\tdef get_wordnet_pos(self, treebank_tag) -> str:\n",
     "\t\t\"\"\"\n",
     "\t\tConvert POS tag from Treebank to WordNet format for better lemmatization.\n",
     "\t\t\"\"\"\n",
@@ -262,7 +354,7 @@
     "\t\telse:\n",
     "\t\t\treturn wordnet.NOUN  # fallback\n",
     "\t\n",
-    "\tdef lemmatize(self, tokens):\n",
+    "\tdef lemmatize(self, tokens) -> list[str]:\n",
     "\t\t\"\"\"\n",
     "\t\tLemmatize a list of word tokens.\n",
     "\t\t\n",
@@ -283,8 +375,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1b2b7d38",
+   "metadata": {},
+   "source": [
+    "## 🧪 Démonstration du Pipeline Complet\n",
+    "\n",
+    "Cette section teste le pipeline complet sur des exemples variés pour illustrer chaque étape du preprocessing.\n",
+    "\n",
+    "**Exemples de test** :\n",
+    "1. **HTML + Mentions/URLs** : Texte avec balises, mentions et liens\n",
+    "2. **Expressions informelles** : Contractions et ponctuation excessive  \n",
+    "3. **Négations** : Test de préservation des mots négatifs\n",
+    "4. **Contenu web** : Hashtags et URLs de sites web\n",
+    "5. **Formes grammaticales** : Différentes conjugaisons et pluriels\n",
+    "\n",
+    "**Étapes visualisées** :\n",
+    "- Texte original → Texte nettoyé → Tokens → Sans stopwords → Lemmatisé\n",
+    "\n",
+    "Cela permet de vérifier l'efficacité de chaque composant du pipeline.\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 79,
    "id": "92c8aeab",
    "metadata": {},
    "outputs": [
