--- a/test_basic_preprocessing.ipynb
+++ b/test_basic_preprocessing.ipynb
@@ -174,7 +174,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -308,6 +308,17 @@
             "🔄 Lemmatisé (9) :\n",
             "   ['really', 'really', 'love', 'much', 'efficient', 'old', 'version', 'fantastic', 'work']\n"
           ]
+        },
+        {
+          "ename": "",
+          "evalue": "",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+            "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+            "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+            "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+          ]
         }
       ],
       "source": [
@@ -343,7 +354,7 @@
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": ".venv",
+      "display_name": "venv311",
       "language": "python",
       "name": "python3"
     },
@@ -357,7 +368,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.10"
+      "version": "3.11.9"
     }
   },
   "nbformat": 4,
