--- a/test_light_preprocessing.ipynb
+++ b/test_light_preprocessing.ipynb
@@ -17,7 +17,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 7,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -32,9 +32,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 8,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "[nltk_data] Downloading package punkt_tab to nltk_data...\n",
+            "[nltk_data]   Unzipping tokenizers\\punkt_tab.zip.\n",
+            "[nltk_data] Downloading package stopwords to nltk_data...\n",
+            "[nltk_data]   Unzipping corpora\\stopwords.zip.\n",
+            "[nltk_data] Downloading package wordnet to nltk_data...\n",
+            "[nltk_data] Downloading package omw-1.4 to nltk_data...\n",
+            "[nltk_data] Downloading package averaged_perceptron_tagger_eng to\n",
+            "[nltk_data]     nltk_data...\n",
+            "[nltk_data]   Unzipping taggers\\averaged_perceptron_tagger_eng.zip.\n"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "execution_count": 8,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Configuration NLTK\n",
         "import nltk\n",
@@ -53,7 +79,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [
         {
@@ -85,7 +111,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [
         {
@@ -126,7 +152,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -172,7 +198,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -306,6 +332,17 @@
             "🔄 Lemmatisé (14) :\n",
             "   ['i', 'realy', 'realy', 'love', '!', 'so', 'much', 'more', 'eficient', 'old', 'version', 'fantastic', 'work', '!']\n"
           ]
+        },
+        {
+          "ename": "",
+          "evalue": "",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+            "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+            "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+            "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+          ]
         }
       ],
       "source": [
@@ -341,7 +378,7 @@
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": ".venv",
+      "display_name": "venv311",
       "language": "python",
       "name": "python3"
     },
@@ -355,7 +392,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.12.10"
+      "version": "3.11.9"
     }
   },
   "nbformat": 4,
