--- a/pipeline.ipynb
+++ b/pipeline.ipynb
@@ -1014,6 +1014,106 @@
     "\n",
     "print(f\"Perte finale: {train_losses[-1]:.6f}\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "a170d559",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 0, Loss: 3.2764\n",
+      "Epoch 10, Loss: 0.7245\n",
+      "Epoch 20, Loss: 0.2029\n",
+      "Epoch 30, Loss: 0.0623\n",
+      "Epoch 40, Loss: 0.0185\n",
+      "Epoch 50, Loss: 0.0054\n",
+      "Epoch 60, Loss: 0.0016\n",
+      "Epoch 70, Loss: 0.0005\n",
+      "Epoch 80, Loss: 0.0001\n",
+      "Epoch 90, Loss: 0.0000\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "\n",
+    "class SimpleRNN(nn.Module):\n",
+    "    def __init__(self, input_size, hidden_size, output_size):\n",
+    "        super().__init__()\n",
+    "        \n",
+    "        self.input_size = input_size\n",
+    "        self.hidden_size = hidden_size\n",
+    "        self.output_size = output_size\n",
+    "\n",
+    "        #  Poids pour l'entrée\n",
+    "        self.W_xh = nn.Parameter(torch.randn(input_size, hidden_size))\n",
+    "\n",
+    "        # Poids pour l'état caché\n",
+    "        self.W_hh = nn.Parameter(torch.randn(hidden_size, hidden_size)) # W_hh = W_hh^T\n",
+    "\n",
+    "        # Biais\n",
+    "        self.b_h = nn.Parameter(torch.zeros(hidden_size))\n",
+    "\n",
+    "        # Couche de sortie\n",
+    "        self.fc = nn.Linear(hidden_size, output_size)\n",
+    "        \n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        batch_size, seq_len, _ = x.size()\n",
+    "\n",
+    "        h_t = torch.zeros(batch_size, self.hidden_size)\n",
+    "\n",
+    "        for t in range(seq_len):\n",
+    "            x_t = x[:, t, :]\n",
+    "            h_t = torch.tanh(x_t @ self.W_xh + h_t @ self.W_hh + self.b_h)\n",
+    "\n",
+    "        output = self.fc(h_t)\n",
+    "        return output\n",
+    "\n",
+    "input_size = 10\n",
+    "hidden_size = 20\n",
+    "output_size = 1\n",
+    "\n",
+    "model = SimpleRNN(input_size, hidden_size, output_size)\n",
+    "x = torch.randn(5, 7, input_size)\n",
+    "y = torch.randn(5, output_size)\n",
+    "\n",
+    "optimizer = torch.optim.SGD(model.parameters(), lr=0.01)\n",
+    "criterion = nn.MSELoss()\n",
+    "\n",
+    "for epoch in range(100):\n",
+    "    optimizer.zero_grad()\n",
+    "    output = model(x)\n",
+    "    loss = criterion(output, y)\n",
+    "    loss.backward()\n",
+    "    optimizer.step()\n",
+    "\n",
+    "    if epoch % 10 == 0:\n",
+    "        print(f\"Epoch {epoch}, Loss: {loss.item():.4f}\")\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b5990ecf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6b2d1198",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
